# server-netflix-im-not-chilled

./: Pipfile  pyproject.toml
films/: apps.py  serializers.py  urls.py  views.py
main_app/: authentication.py  serializers.py  settings.py  urls.py  views.py
spoiler_topics/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
spoiler_topics/migrations/: 0001_initial.py  0002_spoilertopic_netflix_id_spoilertopic_no_vote_and_more.py  0003_spoilertopic_topic_title.py  0004_alter_spoilertopic_netflix_id_and_more.py  0005_alter_spoilertopic_id.py
